<resources>
    <string name="app_name">ChatApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="type_msg">Type Message</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="or">or</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="log_in">Log in</string>
    <string name="forgot_my_pwd">I have forgotten my password</string>
    <string name="my_chats">My Chats</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="to">To:</string>
    <string name="edit">Edit</string>
    <string name="new_chat">New chat</string>
    <string name="alert_wait">Please wait...</string>
    <string name="err_fields_empty">Please fill all the fields</string>
    <string name="err_signup">Error occured while signup:</string>
    <string name="err_login">Error occured while login:</string>
    <string name="err_users">Error occured while findimg users:</string>
    <string name="alert_loading">Loading</string>
    <string name="msg_no_user_found">No users found for chat!</string>
    <string name="user_name">Username</string>
    <string name="password">Password</string>
</resources>

